envs/lab01.metal/gateway/gateway.yaml
---
kind: GatewayClass
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: class-contour
spec:
  controller: projectcontour.io/contour-operator
  parametersRef:
    group: operator.projectcontour.io
    kind: Contour
    scope: Namespace
    name: contour-proxy
    namespace: contour-operator
---
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: gw-contour
  namespace: projectcontour
spec:
  gatewayClassName: class-contour
  listeners:
  - protocol: TLS
    port: 443
    tls:
      mode: Passthrough
    routes:
      kind: TLSRoute
      namespaces:
        from: "All"
  - protocol: HTTP
    port: 80
    routes:
      kind: HTTPRoute
      namespaces:
        from: "All"
