envs/lab01.metal/gateway/route-esx14.yaml
---
kind: TLSRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: route-esx14
  labels:
    gateway: gw-contour
spec:
  gateways:
    allow: All
  rules:
  - matches:
    - snis: [ esx14.lab01.one ]
    forwardTo:
    - serviceName: esx14
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: esx14
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: esx14
subsets:
  - addresses:
      - ip: 172.16.10.114
    ports:
      - port: 443
