envs/lab01.metal/gateway/route-esx15.yaml
---
kind: TLSRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: route-esx15
  labels:
    gateway: gw-contour
spec:
  gateways:
    allow: All
  rules:
  - matches:
    - snis: [ esx15.lab01.one ]
    forwardTo:
    - serviceName: esx15
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: esx15
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: esx15
subsets:
  - addresses:
      - ip: 172.16.10.115
    ports:
      - port: 443
