envs/lab01.metal/gateway/route-vcenter.yaml
---
kind: TLSRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: route-vcenter
  labels:
    gateway: gw-contour
spec:
  gateways:
    allow: All
  rules:
  - matches:
    - snis: [ vcenter.lab01.one ]
    forwardTo:
    - serviceName: vcenter
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: vcenter
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: vcenter
subsets:
  - addresses:
      - ip: 172.16.10.110
    ports:
      - port: 443
